--- a/packages/catalog-model/examples/acme/team-a-group.yaml
+++ b/packages/catalog-model/examples/acme/team-a-group.yaml
@@ -63,6 +63,7 @@ apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
   name: kincheung-zuhlke
+  bitbucket.org/username: kincheung-zuhlke
 spec:
   profile:
     displayName: Kin Cheung
